# cosmic-sim

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  launch.sh
.github/: release-template.md
.github/workflows/: release.yml
src/: campaign.rs  main.rs  notes.rs  save.rs
src/ai/: companion.rs  computer.rs  effects.rs  mod.rs
src/chemistry/: atmosphere.rs  compound.rs  element.rs  mod.rs
src/physics/: constants.rs  mod.rs  orbital.rs  relativity.rs
src/player/: inventory.rs  mod.rs  ship.rs  state.rs  tech.rs
src/ui/: display.rs  terminal.rs
src/universe/: catalog.rs  galaxy.rs  mod.rs  planet.rs  star.rs  system.rs
src/world/: biome.rs  mod.rs  planet_surface.rs  resource.rs
