[package]
name = "cosmic-sim"
version = "0.1.0"
edition = "2024"

[package.metadata.release]
push            = true
publish         = false
sign-tag        = false
tag-name        = "v{{version}}"
pre-release-commit-message = "chore: release v{{version}}"
tag-message     = "Release v{{version}}"

[dependencies]
rand = "0.9"
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
noise = "0.9"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
termimad = "0"
rustyline = "14"
